<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>flexbe_webui</name>
  <version>4.0.0</version>
  <description>FlexBE Web-based User Interface</description>
  <maintainer email="robotics@cnu.edu">David Conner</maintainer>
  <license>Apache 2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>python3-pydantic</exec_depend>
  <exec_depend>python3-fastapi</exec_depend>
  <exec_depend>python3-websockets</exec_depend>
  <exec_depend>flexbe_msgs</exec_depend>
  <exec_depend>flexbe_core</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
